--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
       <version>${spec2.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
   </dependencies>
 
   <build>
